# zephyr_example_use

./: .gitignore  .gitmodules  README.md
bt_example/: CMakeLists.txt  isr_app_tables.c  linker.cmd  prj.conf
example_use_add_sub/: CMakeLists.txt  armgcc_toolchain.cmake  zephyr_custom.cmake
example_use_add_sub/bt_peripheral_custom/: .config  CMakeLists.txt
example_use_add_sub/include/: autoconf.h
example_use_include/customer_project/bt_peripheral_custom/: CMakeLists.txt  zephyr_custom.cmake
